// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntermittentFrequency displays Alert about having form when claim is Medical or Caring leave 1`] = `
<Alert
  neutral={true}
  state="info"
>
  You will need a completed Certification of a Serious Health Condition form for this section.
</Alert>
`;

exports[`IntermittentFrequency displays Alert about having form when claim is Medical or Caring leave 2`] = `
<Alert
  neutral={true}
  state="info"
>
  You will need a completed Certification to Care for a Family Member for this section.
</Alert>
`;

exports[`IntermittentFrequency displays Lead text with form context when claim is for Medical or Caring leave 1`] = `
<Lead>
  Your answers must match Questions # and # in the completed Certification to Care for a Family Member.
</Lead>
`;

exports[`IntermittentFrequency displays Lead text with form context when claim is for Medical or Caring leave 2`] = `
<Lead>
  Your answers must match Questions 35 and 36 in the Certification of a Serious Health Condition form.
</Lead>
`;

exports[`IntermittentFrequency displays duration label corresponding to selected duration basis 1`] = `"How many days of work will you miss per absence?"`;

exports[`IntermittentFrequency displays duration label corresponding to selected duration basis 2`] = `"How many hours of work will you miss per absence?"`;

exports[`IntermittentFrequency displays frequency label corresponding to selected frequency interval and basis 1`] = `"Estimate how many absences per week."`;

exports[`IntermittentFrequency displays frequency label corresponding to selected frequency interval and basis 2`] = `"Estimate how many absences per month."`;

exports[`IntermittentFrequency displays frequency label corresponding to selected frequency interval and basis 3`] = `"Estimate how many absences over the next 6 months."`;

exports[`IntermittentFrequency renders the page 1`] = `
<QuestionPage
  onSave={[Function]}
  title="Leave details"
>
  <Alert
    neutral={true}
    state="info"
  >
    You will need a completed Certification of a Serious Health Condition form for this section.
  </Alert>
  <Heading
    level="2"
    size="1"
  >
    Tell us the estimated frequency and duration of your intermittent leave.
  </Heading>
  <Lead>
    Your answers must match Questions 35 and 36 in the Certification of a Serious Health Condition form.
  </Lead>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "At least once a week",
          "value": "Weeks",
        },
        Object {
          "checked": false,
          "label": "At least once a month",
          "value": "Months",
        },
        Object {
          "checked": true,
          "id": "irregularOver6Months",
          "key": "irregularOver6Months",
          "label": "Irregular over the next 6 months",
          "value": "Months",
        },
      ]
    }
    label="How often might you need to be absent from work (frequency interval)?"
    name="leave_details.intermittent_leave_periods[0].frequency_interval_basis"
    onChange={[Function]}
    smallLabel={true}
    type="radio"
    value="Months"
  />
  <ConditionalContent
    visible={true}
  >
    <InputNumber
      label="Estimate how many absences over the next 6 months."
      name="leave_details.intermittent_leave_periods[0].frequency"
      onChange={[Function]}
      smallLabel={true}
      value={6}
      valueType="integer"
      width="small"
    />
    <InputChoiceGroup
      choices={
        Array [
          Object {
            "checked": false,
            "label": "At least a day",
            "value": "Days",
          },
          Object {
            "checked": true,
            "label": "Less than a full work day",
            "value": "Hours",
          },
        ]
      }
      label="How long will an absence typically last?"
      name="leave_details.intermittent_leave_periods[0].duration_basis"
      onChange={[Function]}
      smallLabel={true}
      type="radio"
      value="Hours"
    />
  </ConditionalContent>
  <InputNumber
    label="How many hours of work will you miss per absence?"
    name="leave_details.intermittent_leave_periods[0].duration"
    onChange={[Function]}
    smallLabel={true}
    value={3}
    valueType="integer"
    width="small"
  />
</QuestionPage>
`;
